--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,70 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+
+   body {
+      background: linear-gradient(to bottom, #f3e5f5, #e1bee7);
+      font-family: Arial, sans-serif;
+    }
+
+    .navbar {
+      background-color: white;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+
+    .search-box {
+      width: 500px;
+    }
+
+    .banner {
+      background: url('https://img.freepik.com/free-vector/airplane-flight-path-background-with-dotted-lines_1017-27372.jpg') no-repeat center;
+      background-size: cover;
+      padding: 60px 20px;
+      color: white;
+      text-align: center;
+      border-radius: 10px;
+    }
+
+    .product-card {
+      background: white;
+      border-radius: 10px;
+      padding: 20px;
+      margin-top: 20px;
+      text-align: center;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease;
+    }
+
+    .product-card:hover {
+      transform: scale(1.03);
+    }
+.homeBannerSection {
+  position: relative;
+  overflow: hidden;
+  height: 400px; 
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.homeBannerSection .slick-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 40px !important;
+  height: 40px !important;
+  background: #000;
+  border-radius: 100%;
+  z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.homeBannerSection .slick-arrow.slick-next {
+  right: 0px !important;
 }
 
-.card {
-  padding: 2em;
+.homeBannerSection .slick-arrow.slick-prev {
+  left: 0px !important;
 }
 
-.read-the-docs {
-  color: #888;
+.homeBannerSection .slick-arrow:hover {
+  background: #333;
+  transition: all 0.3s ease;
 }
